# vekt

./: .clang-format  .gitignore  dummy.sln.licenseheader
example/: CMakeLists.txt  app.cpp  app.hpp  gl_backend.cpp  gl_backend.hpp  glfw_window.cpp  glfw_window.hpp  main.cpp
example/glfw/src/: init.c  internal.h
src/: main.cpp  vekt.cpp  vekt.hpp
vekt/vekt/x64/Debug/: vc143.idb  vekt.exe.recipe
vekt/vekt/x64/Debug/vekt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  vekt.lastbuildstate
xcode/vekt/vekt/: vekt.hpp
xcode/vekt/vekt.xcodeproj/: project.pbxproj
xcode/vekt/vekt.xcodeproj/project.xcworkspace/xcuserdata/inanevin.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/vekt/vekt.xcodeproj/xcuserdata/inanevin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/vekt/vekt.xcodeproj/xcuserdata/inanevin.xcuserdatad/xcschemes/: xcschememanagement.plist
